--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Planted</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&family=Roboto&display=swap" rel="stylesheet"> 
+  
 </head>
 <body>
-  
+    <header>
+      <h1>helloOOOOo</h1>
+    </header>
 </body>
 </html>
